# SimpleGetRequest

./: .gitignore  README.md
app/: app.cpp
src/: CMakeLists.txt  main.cpp
src/implementation/: http_client.cpp  http_headers.cpp
src/include/: http_client.hpp  http_headers.hpp
tests/: main.cpp  test_http_headers.cpp
